refactor(kassensystem): architecture change refactor(security): refactored security aspects to commons. more consistent and overall improvements to AuthContext and Jwt Authentication / Filters refactor(jwt): added static jwt builders, payloads and enums. this allows for more consistent reading and building of them refactor(vaadin): extracted abstract ui components to new commons-ui module feat(lock): implemented account locking feat(lock): implemented account specific login. admin cant login to kassensystem and cashier not to fillialensystem feat(configuration): added autoconfiguration classes to commons module. this allows common filters, values, beans / components to only be set once and be implemented into using modules feat(vaadin): added global errorHandler overlay. on occurring exception, the errorHandler overlay outputs the exception including the stacktrace, message, title and other oddities, which can be more easily copied / be made aware of feat(utility): added many helper utility methods which allow for more consistent operations. AuthContext, AuthContextHolder, DateTimeFormat, AuthWhitelist ... bugfix(dto): fixed null value in AccountDTO bugfix(pom): improved pom dependency versioning. BOMs and properties properly out layered to parents