@@ -2,7 +2,6 @@ package de.fhdw.fillialensystem.view;
 
 import com.vaadin.flow.component.Component;
 import com.vaadin.flow.component.UI;
-import com.vaadin.flow.component.applayout.AppLayout;
 import com.vaadin.flow.component.applayout.DrawerToggle;
 import com.vaadin.flow.component.button.Button;
 import com.vaadin.flow.component.grid.Grid;
@@ -15,47 +14,35 @@ import com.vaadin.flow.component.icon.VaadinIcon;
 import com.vaadin.flow.component.orderedlayout.FlexComponent;
 import com.vaadin.flow.component.orderedlayout.HorizontalLayout;
 import com.vaadin.flow.component.orderedlayout.VerticalLayout;
-import com.vaadin.flow.router.BeforeEnterEvent;
-import com.vaadin.flow.router.BeforeEnterObserver;
-import com.vaadin.flow.router.QueryParameters;
 import com.vaadin.flow.router.Route;
 import com.vaadin.flow.router.RouterLink;
 import com.vaadin.flow.theme.lumo.Lumo;
 import de.fhdw.commons.persistence.entity.AccountRoleEnum;
-import de.fhdw.commons.view.ErrorQueryParameter;
+import de.fhdw.commons.ui.utlity.DateTimeFormat;
+import de.fhdw.commons.ui.view.AbstractAdminView;
 import de.fhdw.fillialensystem.persistence.service.other.RegisterRegistryService;
 import de.fhdw.fillialensystem.utility.RegisterClient;
 import de.fhdw.fillialensystem.view.admin.*;
 import jakarta.annotation.security.RolesAllowed;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.context.SecurityContextHolder;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.time.ZoneId;
-import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 @Route("")
 @RolesAllowed({AccountRoleEnum.ROLE_ADMIN})
-public class MainView extends AppLayout implements BeforeEnterObserver {
+public class MainView extends AbstractAdminView {
 
     private final H2 title = new H2();
 
     private final List<RegisterClient> kassensystemInstances;
-    private final DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd.MM.yyyy HH:mm:ss");
 
     public MainView(RegisterRegistryService registerRegistryService) {
         super();
         this.kassensystemInstances = new ArrayList<>(registerRegistryService.findAllRegistries());
 
         createHeader();
-        addToDrawer(createSidebar());
-        setContent(createContent());
     }
 
     private void createHeader() {
@@ -99,8 +86,6 @@ public class MainView extends AppLayout implements BeforeEnterObserver {
         header.setJustifyContentMode(FlexComponent.JustifyContentMode.BETWEEN);
         header.setAlignItems(FlexComponent.Alignment.CENTER);
 
-        addToNavbar(header);
-
         UI.getCurrent().getPage().executeJs("""
             const label = document.getElementById('live-clock-label');
             if (label) {
@@ -126,7 +111,7 @@ public class MainView extends AppLayout implements BeforeEnterObserver {
                 createSidebarLink("Admin", VaadinIcon.USER, AdminView.class),
                 createSidebarLink("Accounts ", VaadinIcon.GROUP, RoleView.class),
                 createSidebarLink("Kassen", VaadinIcon.CASH, RegisterAddView.class),
-                createSidebarLink("Bestand", VaadinIcon.PACKAGE, StockAdminView.class),
+                createSidebarLink("Bestand", VaadinIcon.PACKAGE, StockView.class),
                 createSidebarLink("Belege", VaadinIcon.RECORDS, DailyReceiptReportingView.class)
         );
         return sidebar;
@@ -186,11 +171,11 @@ public class MainView extends AppLayout implements BeforeEnterObserver {
                 .setHeader("Status")
                 .setAutoWidth(true);
 
-        grid.addColumn(ks -> formatter.format(ks.getRegisteredAt().atZone(ZoneId.systemDefault())))
+        grid.addColumn(ks -> DateTimeFormat.UI_DATE_TIME.format(ks.getRegisteredAt().atZone(ZoneId.systemDefault())))
                 .setHeader("Registered At")
                 .setAutoWidth(true);
 
-        grid.addColumn(ks -> formatter.format(ks.getLastSeen().atZone(ZoneId.systemDefault())))
+        grid.addColumn(ks -> DateTimeFormat.UI_DATE_TIME.format(ks.getLastSeen().atZone(ZoneId.systemDefault())))
                 .setHeader("Last Seen")
                 .setAutoWidth(true);
 
@@ -204,57 +189,16 @@ public class MainView extends AppLayout implements BeforeEnterObserver {
     private Component createOnlineBadge(RegisterClient registerClient) {
         Span badge = new Span(registerClient.isOnline() ? "Online" : "Offline");
         badge.getElement().getThemeList().add("badge");
-        badge.getElement().getThemeList()
-                .add(registerClient.isOnline() ? "success" : "error");
+        badge.getElement().getThemeList().add(registerClient.isOnline() ? "success" : "error");
         return badge;
     }
 
     private Component createInstanceLink(RegisterClient registerClient) {
         String name = String.format("Kasse %d", kassensystemInstances.indexOf(registerClient) + 1);
         String url = "http://" + registerClient.getSystemClientDTO().getHost() + ":" + registerClient.getSystemClientDTO().getPort() + "/cashier";
-        try {
-            url += "?name=" + URLEncoder.encode(name, StandardCharsets.UTF_8.name());
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
+        url += "?name=" + URLEncoder.encode(name, StandardCharsets.UTF_8);
         Anchor link = new Anchor(url, "Open");
         link.setTarget("_blank");
         return link;
-    }
-
-    @Override
-    public void beforeEnter(BeforeEnterEvent beforeEnterEvent) {
-        Class<?> targetView = beforeEnterEvent.getNavigationTarget();
-
-        RolesAllowed rolesAllowed = targetView.getAnnotation(RolesAllowed.class);
-        if (rolesAllowed == null) {
-            return;
-        }
-        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-
-        if (auth == null || auth.getPrincipal() == null || auth.getPrincipal().toString().equalsIgnoreCase("anonymousUser")) {
-            beforeEnterEvent.rerouteTo("login", QueryParameters.simple(Map.of("error", ErrorQueryParameter.LOGIN_REQUIRED.value())));
-            return;
-        }
-
-        if (auth.getAuthorities().isEmpty()) {
-            beforeEnterEvent.rerouteTo("login", QueryParameters.simple(Map.of("error", ErrorQueryParameter.ROLES_MISSING.value())));
-            return;
-        }
-
-        boolean authorized = auth.getAuthorities().stream()
-                .map(GrantedAuthority::getAuthority)
-                .anyMatch(authRole -> {
-                    for (String requiredRole : rolesAllowed.value()) {
-                        if (authRole.equals(requiredRole)) {
-                            return true;
-                        }
-                    }
-                    return false;
-                });
-
-        if (!authorized) {
-            beforeEnterEvent.rerouteTo("login", QueryParameters.simple(Map.of("error", ErrorQueryParameter.ACCESS_DENIED.value())));
-        }
     }
 }
